--- a/MyProject/Project/Areas/Admin/Views/Product/Delete.cshtml
+++ b/MyProject/Project/Areas/Admin/Views/Product/Delete.cshtml
@@ -15,6 +15,7 @@
         <form method="post">
            
             <input asp-for="Id" hidden />
+            <input asp-for="ImageUrl" hidden />
             <div class=" border p-3 mt-4">
 
                 <div class="form-floating py-3 col-12">
@@ -52,7 +53,7 @@
 
                 <div class="row mt-3">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
+                        <button type="submit" class="btn btn-primary form-control">Delete</button>
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary form-control">
