--- a/MyProject/Project/Areas/Admin/Views/Product/Index.cshtml
+++ b/MyProject/Project/Areas/Admin/Views/Product/Index.cshtml
@@ -12,12 +12,12 @@
             <div class="row pb-3">
                 <div class="col-6"></div>
                 <div class="col-6 text-end">
-                    <a asp-controller="Product" asp-action="create" class="btn btn-primary">
+                    <a asp-controller="Product" asp-action="UpSert" class="btn btn-primary">
                         <i class="bi bi-plus-circle"></i> Add New Product
                     </a>
                 </div>
             </div>
-            <table class="table table-bordered table-striped">
+            <table id = "tblData" class="table table-bordered table-striped">
                 <thead>
                     <tr>
                         <th>
@@ -38,40 +38,12 @@
                         <th>Actions</th>
                     </tr>
                 </thead>
-                <tbody>
-                    @foreach (var obj in Model)
-                    {
-                        <tr>
-                            <td>
-                                @obj.Title
-                            </td>
-                            <td>
-                                @obj.ISBN
-                            </td>
-                            <td>
-                                @obj.Price
-                            </td>
-                            <td>
-                                @obj.Author
-                            </td>
-                            <td>
-
-                            </td>
-                            <td>
-                                <div class="w-75 btn-group" role="group">
-                                    <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                        <i class="bi bi-pencil-square"></i> Edit
-                                    </a>
-                                    <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                        <i class="bi bi-trash"></i> Delete
-                                    </a>
-                                </div>
-                            </td>
-
-                        </tr>
-                    }
-                </tbody>
+                 
             </table>
         </div>
  </div>
+
+ @section Scripts {
+     <script src="~/js/Product.js"></script>
+ }
 
